# JumpAllButOneGame

./: CMakeLists.txt  README.md
include/: board.hpp
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  board_tests.cpp
